[gd_scene load_steps=12 format=3 uid="uid://dl44clkw2hucb"]

[ext_resource type="Texture2D" uid="uid://c05d5n1y1yjpt" path="res://mapSquare.png" id="1_c1vqw"]
[ext_resource type="Script" path="res://world.gd" id="1_xancu"]
[ext_resource type="PackedScene" uid="uid://bgcsq1xdk5h5f" path="res://player.tscn" id="2_ouuyp"]
[ext_resource type="Script" path="res://UI.gd" id="4_p30g1"]
[ext_resource type="Texture2D" uid="uid://ch1ca6arumfqe" path="res://circleFillBg.png" id="5_cwgtq"]
[ext_resource type="Texture2D" uid="uid://8ifih7adxjgo" path="res://circleFill.png" id="6_14j8x"]
[ext_resource type="Script" path="res://Collectables.gd" id="7_d3uqg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efxdm"]
size = Vector2(31.1127, 31.1127)

[sub_resource type="SystemFont" id="SystemFont_8j417"]
font_names = PackedStringArray("Consolas")

[sub_resource type="SystemFont" id="SystemFont_xnk6g"]
font_names = PackedStringArray("Consolas")

[sub_resource type="SystemFont" id="SystemFont_h6oxo"]
font_names = PackedStringArray("Consolas")

[node name="World" type="Node2D"]
script = ExtResource("1_xancu")

[node name="Point0" type="StaticBody2D" parent="."]
rotation = 0.785398
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point0"]
position = Vector2(1.52588e-05, 1.52588e-05)
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Point0"]
texture = ExtResource("1_c1vqw")
metadata/_edit_lock_ = true

[node name="Point1" type="StaticBody2D" parent="."]
position = Vector2(0, -100)
rotation = 0.785398

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point1"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Point1"]
texture = ExtResource("1_c1vqw")
metadata/_edit_lock_ = true

[node name="Point2" type="StaticBody2D" parent="."]
position = Vector2(170, 0)
rotation = 0.785398

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point2"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Point2"]
texture = ExtResource("1_c1vqw")
metadata/_edit_lock_ = true

[node name="Point3" type="StaticBody2D" parent="."]
position = Vector2(0, 100)
rotation = 0.785398

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point3"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Point3"]
texture = ExtResource("1_c1vqw")
metadata/_edit_lock_ = true

[node name="Point4" type="StaticBody2D" parent="."]
position = Vector2(-170, 0)
rotation = 0.785398

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point4"]
shape = SubResource("RectangleShape2D_efxdm")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Point4"]
texture = ExtResource("1_c1vqw")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_ouuyp")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -82)
offset = Vector2(0, 82)
zoom = Vector2(1.5, 1.5)

[node name="Collectables" type="Node2D" parent="."]
script = ExtResource("7_d3uqg")

[node name="CollectablesTimer" type="Timer" parent="Collectables"]
wait_time = 4.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_p30g1")

[node name="MultiplierProgressBar" type="TextureProgressBar" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = 12.0
offset_right = 16.0
offset_bottom = 44.0
grow_horizontal = 2
scale = Vector2(1.6, 1.6)
pivot_offset = Vector2(16, 16)
fill_mode = 4
texture_under = ExtResource("5_cwgtq")
texture_progress = ExtResource("6_14j8x")

[node name="MultiplierTxt" type="Label" parent="UI/MultiplierProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_8j417")
text = "x1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ScoreTxt" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.5
offset_top = 53.53
offset_right = 58.5
offset_bottom = 100.53
grow_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_xnk6g")
theme_override_font_sizes/font_size = 31
text = "0"
horizontal_alignment = 1

[node name="ScorePopup" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -104.0
offset_right = 69.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 75)
theme_override_colors/font_shadow_color = Color(0.494118, 0.501961, 0.913725, 0.952941)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = SubResource("SystemFont_h6oxo")
theme_override_font_sizes/font_size = 56
text = "+5"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Collectables/CollectablesTimer" to="Collectables" method="_on_collectables_timer_timeout"]
